update animation css

--- a/src/animation.css
+++ b/src/animation.css
@@ -1,6 +1,6 @@
 .reactLogoFooter {
-	-webkit-animation-name: rotate-center 9s ease-in-out infinite alternate both;
-	        animation-name: rotate-center 9s ease-in-out infinite alternate both;
+	-webkit-animation: rotate-center 9s ease-in-out infinite alternate both;
+	        animation: rotate-center 9s ease-in-out infinite alternate both;
 }
  @-webkit-keyframes rotate-center {
     0% {
